# Conect2Py-Package

./: .gitignore  LICENSE  README.md  TAC_UseCase_Example.ipynb  notebook.ipynb  notebook_example.ipynb  pyproject.toml  requirements.txt  setup.py
Info/: AutoCloud.md
Notebooks/: AutoCloud_UseCase_Test.ipynb
PESQUISALIB-TACtac_libvenv/: pyvenv.cfg
PESQUISALIB-TACtac_libvenv/Scripts/: activate  activate.bat
conect2py/: __init__.py
conect2py/models/: AutoCloud.py  AutoTAC.py  TAC.py  TEDA.py  __init__.py
conect2py/run/: __init__.py  multiple.py
conect2py/utils/: __init__.py  plots.py
data/: tac_freematics_example.csv
pckg-venv/: pyvenv.cfg
pckg-venv/Scripts/: activate  activate.bat  rst2html.py  rst2html4.py  rst2html5.py  rst2latex.py  rst2man.py  rst2odt.py  rst2odt_prepstyles.py  rst2pseudoxml.py  rst2s5.py  rst2xetex.py  rst2xml.py  rstpep2html.py
src/tac.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/tac/models/: AutoTAC.py
src/tac/run/: multiple.py
tac/models/: TAC.py
tac/run/: single.py
tac/utils/: format_save.py  metrics.py  plots.py
