[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Conect2ai"
version = "0.1.0"
authors = [
  { name="Conect2ai", email="conect2ai@gmail.com" },
]
description = "A python library for data compression using TAC (Tiny Anomaly Compression)"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "ipython >= 8.15.0",
    "matplotlib >= 3.6.0",
    "numpy >= 1.24.0",
    "pandas >= 1.8.0",
    "scikit-learn >= 1.3.0",
    "seaborn >= 0.12.2",
]

[project.urls]
"Homepage" = "https://github.com/conect2ai/TACpy"
"Bug Tracker" = "https://github.com/conect2ai/TACpy/issues"